--- a/public/black/css/black-dashboard.css
+++ b/public/black/css/black-dashboard.css
@@ -2314,8 +2314,8 @@ textarea.form-control {
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  padding: 11px 40px;
-  font-size: 0.875rem;
+  padding: 11px;
+  font-size: 0.575rem;
   line-height: 1.35em;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3366,7 +3366,8 @@ input[type="button"].btn-block {
   position: relative;
   height: 0;
   overflow: hidden;
-  transition: height 0.35s ease;
+  /* transition: height 0.35s ease; */
+  transition: none;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -4298,6 +4299,7 @@ input[type="button"].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  border
 }
 
 .nav-link:hover,
@@ -4307,10 +4309,6 @@ input[type="button"].btn-block {
 
 .nav-link.disabled {
   color: #6c757d;
-}
-
-.nav-tabs {
-  border-bottom: 0.0625rem solid #e3e3e3;
 }
 
 .nav-tabs .nav-item {
@@ -14856,18 +14854,15 @@ table.tablesorter thead tr .headerSortDown {
   background: -o-linear-gradient(0deg, var(--primary) 0%, var(--primarygradient) 100%);
   background: -moz-linear-gradient(0deg, var(--primary) 0%, var(--primarygradient) 100%);
   background: linear-gradient(0deg, var(--primary) 0%, var(--primarygradient) 100%);
-  height: calc(100vh - 90px);
-  width: 230px;
-  position: fixed;
   top: 0;
+  height:90vh;
+  width:14vw;
   left: 0;
   z-index: 1;
   background-size: cover;
   background-position: center center;
   display: block;
   box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.6);
-  margin-top: 80px;
-  margin-left: 20px;
   border-radius: 5px;
   transition: 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
@@ -15319,7 +15314,6 @@ table.tablesorter thead tr .headerSortDown {
   float: right;
   width: 100%;
   min-height: 100vh;
-  border-top: 2px solid var(--primary);
   background: linear-gradient(#1e1e2f, #1e1e24);
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -15341,12 +15335,17 @@ table.tablesorter thead tr .headerSortDown {
 }
 
 .main-panel>.content {
-  padding: 78px 30px 30px 280px;
+  /* padding: 78px 30px 30px 280px; */
+  padding-top: 78px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
   min-height: calc(100vh - 70px);
 }
 
 .main-panel>.navbar {
   margin-bottom: 0;
+  border-bottom: 2px solid var(--primary);
 }
 
 .main-panel .header {
@@ -15542,11 +15541,6 @@ table.tablesorter thead tr .headerSortDown {
   }
   .nav-open .main-panel {
     right: 0;
-    -webkit-transform: translate3d(260px, 0, 0);
-    -moz-transform: translate3d(260px, 0, 0);
-    -o-transform: translate3d(260px, 0, 0);
-    -ms-transform: translate3d(260px, 0, 0);
-    transform: translate3d(260px, 0, 0);
   }
   .nav-open .sidebar {
     transition: 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -17930,10 +17924,59 @@ option{
 }
 
 .editor{
-  width:85vw;
-  height:85vh;
+  resize:none;
+  overflow:auto;
+  min-height:calc(90vh);
+  max-height:calc(90vh);
   border:1px solid var(--gray);
   border-radius: 5px;
   background-color: var(--gray-dark);
   color:#fff;
+  width:100%;
+}
+
+.dashboard{
+  height:calc(88vh);
+  background-color: #32325d;
+  border-radius: 5px;
+  overflow:auto;
+}
+
+.dashboard div{
+  display: inline-grid;
+  justify-content: center;
+  left: var(--l);
+  top: var(--t);
+}
+
+.drawpad label{
+  width: 10vw;
+  text-align: center;
+  color:#fff;
+  background-color: #101420;
+  border-radius: 3px;
+  padding:5px;
+  margin:5px;
+  cursor:move !important;
+}
+
+.fallout{
+  width:82vw;
+  padding-left:1vw;
+}
+
+.dash-btn{
+  margin: 0px 1px;
+  border-radius: 5px 2px;
+}
+
+@media screen and (max-width:992px) {
+  .fallout{
+    width:100vw;    
+  }  
+}
+
+.demi{
+  position:fixed;
+  right:5vw;
 }
