--- a/public/black/css/black-dashboard.css
+++ b/public/black/css/black-dashboard.css
@@ -15543,6 +15543,7 @@ table.tablesorter thead tr .headerSortDown {
     right: 0;
   }
   .nav-open .sidebar {
+    margin-top: 4vh;
     transition: 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     -webkit-transform: translate3d(0px, 0, 0);
     -moz-transform: translate3d(0px, 0, 0);
@@ -17926,8 +17927,8 @@ option{
 .editor{
   resize:none;
   overflow:auto;
-  min-height:calc(90vh);
-  max-height:calc(90vh);
+  min-height:calc(86vh);
+  max-height:calc(86vh);
   border:1px solid var(--gray);
   border-radius: 5px;
   background-color: var(--gray-dark);
